# MDora

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: RELEASING.md
src/: App.test.tsx  App.tsx  sample.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src/components/: EmptyState.test.tsx  EmptyState.tsx  MarkdownView.test.tsx  MarkdownView.tsx  MermaidBlock.test.tsx  MermaidBlock.tsx  SearchBar.test.tsx  SearchBar.tsx  UpdateBanner.tsx
src/lib/: paths.test.ts  paths.ts
