[package]
name = "mdora"
version = "0.1.0"
description = "A Markdown reader with Mermaid graph support"
authors = ["Gregory Klein"]
edition = "2021"

[lib]
name = "mdora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
