[package]
name = "mdora"
version = "0.2.3"
description = "A Markdown reader with Mermaid graph support"
authors = ["Gregory Klein"]
edition = "2021"

[lib]
name = "mdora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
